[package]
name = "gilfoyle-alert"
version = "0.1.0"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Silicon valley Gilfoyle alert"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/deadblackclover/gilfoyle-alert"
repository = "https://github.com/deadblackclover/gilfoyle-alert"
keywords = ["silicon valley", "gilfoyle"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
reqwest = { version = "0.10.6", features = ["blocking"] }
serde_json = "1.0.56"